<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Trip Log</string>

    <string name="action_settings">Settings</string>
    <string name="welcomePage">Welcome Press any key below to Start</string>
    <string name="trip_title_hint">Enter Trip Title </string>
    <string name="trip_id_label">New Trip</string>
    <string name="date_picker_title">Date of Trip </string>
    <string name="time_picker_title">Time of Trip</string>
    <string name="trip_submit_label">Submit</string>
    <string name="new_trip">Add Trip</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="submit_button">Log In</string>
    <string name="welcomeHint">Welcome</string>
    <string name="logout_Button">Log Out</string>
    <string name ="tripManualBtn">Click to Enter a Trip Manually</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="trip_solved_label">Submit</string>
    <string name="trip_details">Fill in Details Below</string>
    <string name="subtitle_format">%1$x Trip</string>
    <string name="trip_AM_hint">Is this a Morning Trip</string>
    <string name="trip_id_hint">Trip id</string>
    <string name="trip_date_hint">Date</string>
    <string name="nonmedical_hint">Non-Medical</string>
    <string name="medical_hint">Medical</string>
    <string name="wrkSch_hint">Work/School</string>
    <string name="driver_hint">Employee Name</string>
    <string name="route_hint">Route:</string>
    <string name="passenger_hint">Passenger Name</string>
    <string name="employeeID">Employee ID</string>
    <string name="timeStart_hint">Pick Up Time</string>
    <string name="timeEnd_hint">Drop Off Time</string>
    <string name="startMill_hint">Start Millage</string>
    <string name="endMill_hint">End Millage</string>
    <string name="vehicleId_hint">Vehicle Vin Number </string>
    <string name="vehicleVin_hint">Vehicle Vin Number</string>
    <string name="fareAmount_hint">Fare Amount</string>
    <string name="fareCollected">Fare Collected</string>
    <string name="origin_hint">Address of Origin</string>
    <string name="spin_label1">Employee Status</string>
    <string name="spin_label2">Type Of Outing</string>
    <string name="destination_hint">Address of Destination</string>
    <string name="trip_startTime">Pick up Time</string>
    <string name="tripButton">Click for Daily Route</string>
    <string name="tripReportBtn">Click to Send/Save your Daily Report</string>
    <string name="vehicleReportBtn">Vehicle Inspection</string>
    <string-array name="status_array">
        <item>Driver</item>
        <item>Administrator</item>
        <item>WebMaster</item>
        <item>Volunteer</item>
        <item>FormerEmployee</item>
        <item>Other</item>
    </string-array>
    <string-array name="type_outing">
        <item>Non-Medical</item>
        <item>Medical</item>
        <item>Education</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
