<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@drawable/start_background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/employeeID_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/employeeID"
                android:inputType="number|text" />

            <EditText
                android:id="@+id/driverName_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/driver_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/vehicleID_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vehicleId_hint"
                android:inputType="number|textCapCharacters|text" />

            <TextView
                android:id="@+id/spin1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spin_label1" />

            <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/driverName_text" />

            <TextView
                android:id="@+id/spin2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spin_label2" />

            <Spinner
                android:id="@+id/type_outing_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/passengerName_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passenger_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/origination_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/origin_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/destination_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/destination_hint"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startMill_hint"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/odometerStart_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/startMill_hint"
                android:inputType="number|numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endMill_hint"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/odometerEnd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/endMill_hint"
                android:inputType="number|numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeStart_hint"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/trip_StartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/trip_startTime"
                android:inputType="datetime" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeEnd_hint"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/tripEndTime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timeEnd_hint"
                android:inputType="datetime" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fareAmount_hint"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/fareAmount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fareAmount_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fareCollected"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/fareCollected_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fareCollected"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/trip_solved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="@color/colorAccent"
                    android:text="@string/trip_solved_label" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>



