<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginRight="15dp"
        android:text="@string/welcomePage"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:textSize="25dp" />


    <Button
        android:id="@+id/listTripBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="10pt"
        android:paddingTop="25pt"
        android:textStyle="bold|italic"
        android:text="@string/tripButton"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/sendTripBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="10pt"
        android:paddingTop="25pt"
        android:textStyle="bold|italic"
        android:text="@string/tripReportBtn"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/addTripBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="10pt"
        android:paddingTop="25pt"
        android:textStyle="bold|italic"
        android:text="@string/tripManualBtn"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/inspectionBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="10pt"
        android:paddingTop="25pt"
        android:text="@string/vehicleReportBtn"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteY="430dp" />
    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:onClick="logout"
        android:text="@string/logout_Button"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tripListTView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=" "
        android:textSize="26dp"
        tools:layout_editor_absoluteY="534dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="635dp" />

</LinearLayout>