<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_background">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="Login"
        android:textSize="55dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/userName_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_toLeftOf="@+id/userName_field"
        android:text="@string/userName"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/userName_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_gravity="center"
        android:background="@drawable/custom_text_box_2"
        android:gravity="top|left"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="24dp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_text_box"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:baselineAligned="false"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="25dp" />


    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:onClick="login"
        android:text="@string/submit_button"
        android:textStyle="bold|italic" />


</LinearLayout>